[package]
name = "pingopher"
version = "0.1.0"
authors = ["Mohammad Danesh <mohammad@danesh.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray = { git = "https://github.com/aitchex/tray", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.14"
winreg = "0.10.1"
